role sctiving works but deactivation not working
